# ASNPrefixMap

./: CMakeLists.txt  LICENSE  README.md  config.ini  snapshot.txt  stats.csv
docs/: architecture.md
examples/: events.jsonl  ris_live_messages.jsonl
src/: bgp_event.h  config.cpp  config.h  error_format.h  main.cpp  ris_live_demo.cpp  routing_state.cpp  routing_state.h
src/parser/: ris_live_parser.cpp  ris_live_parser.h
src/peer/: peer_registry.cpp  peer_registry.h
src/prefix/: prefix.cpp  prefix.h
src/snapshot/: snapshot_io.cpp  snapshot_io.h
src/source/: bgp_source.h  file_jsonl_source.cpp  file_jsonl_source.h  ris_live_websocket_source.cpp  ris_live_websocket_source.h
src/stats/: growth_stats.cpp  growth_stats.h
